Version 0.38.3
  * Fixed problem adding --isescan-results with Genbank input to breseq CONVERT-REFERENCE
  * Miscellanous bug fixes related to nonstandard reference file loading.

Version 0.38.2
  * Miscellanous bug fixes and updates to reference file handling.
  * Updates to reference format documentation to describe how to get better IS prediction.
  * Added experimental breseq SOFT-CLIPPING subcommand.

Version 0.38.1
  * Fix for infinite loop triggered by help when terminal window was too narrow.
  
Version 0.38.0
  * breseq can now analyze long-read sequencing data. It will split long reads into short subsequence
    reads that are of a length that works for its read mapping parameters and new junction analysis.
    Read splitting can be controlled with the --long-read-* options. If you are looking for structural
    variation, you should be performing de novo assembly and genome comparisons using other tools!
    breseq will not be able to identify or fully resolve large or complex structural variants.
  * If you are using the current generation of Nanopore long read data, we recommend using the 
    --nanopore option, which sets read mapping parameters that speed up the analysis and filters 
    out predictions in error-prone homopolymer repeats of 4 or more bases.
  * The MacOSX executable is now universal (should run on both Intel and M1 macs).
  * Changed how reads that map equally to the reference and new junction get resolved to
    eliminate junctions that could get assigned high frequencies due to very little evidence,
    particularly in polymorphism mode. This approach is more conservative and may decrease the
    predicted frequencies of junctions, but should only have minor effects in consensus mode.

Version 0.37.1
  * Fixed bug in the way that indels in homopolymers were realigned for consistency.
    that sporadically caused fatal "Covariate 'quality' exceeded enforced maximum" errors.